--- a/app/views/worktrains/show.html.erb
+++ b/app/views/worktrains/show.html.erb
@@ -122,12 +122,18 @@
 		</div>
 	</div>
 	<div class="my-border col-md-12">
-		<div class="list-icon text-center" style="visibility: visible;">1</div>
-		<div class="list-text">从总体上讲,社会对计算机人才总需求量没有明显变化,但毕业生就业岗位分布和岗位层次将更宽泛,需求的主体由政府机关、金融单位、电信系统、国有企业转向教育系统、非公有制经济实体等中小用人单位.由于毕业生人数剧增,就业率与供求比例明显走低.</div>
-		<div class="list-icon text-center" style="visibility: visible;">2</div>
-		<div class="list-text">企业是吸纳人才的主力.随着国有企业改革步伐加大,对高新技术人才、计算机专业大学生的需求将迅速增长.高新技术企业每年产值增长在20以上,迅速发展和这一行业要求员工素质高的特点,成为吸收计算机专业大学生的主要企业单位.加入WTO,外国资本、公司的涌入,需要招聘大批高素质的计算机专业人才,毕业生的就业选择和人才流动会偏向外资企业.</div>
-		<div class="list-icon text-center" style="visibility: visible;">3</div>
-		<div class="list-text">教师职业倍受青睐.2002年我国教育经费占国内生产总值的比例已上升到3.6,高等教育大众化、现代教学技术的普及,需要大量的计算机专业人才.2001年全国高校和中小学教职工的年平均工资分别为18054元、10194元,成为近十年来工资增幅最大的职业之一.2000年全国计算机专业师范生有79.35的毕业生到各类学校任教,非师范生从事教育工作的也占到10.38,教师职业越来越热.</div>
+		<div class="col-md-12">
+			<div class="list-icon text-center" style="visibility: visible;">1</div>
+			<div class="list-text">从总体上讲,社会对计算机人才总需求量没有明显变化,但毕业生就业岗位分布和岗位层次将更宽泛,需求的主体由政府机关、金融单位、电信系统、国有企业转向教育系统、非公有制经济实体等中小用人单位.由于毕业生人数剧增,就业率与供求比例明显走低.</div>
+		</div>
+		<div class="col-md-12">
+			<div class="list-icon text-center" style="visibility: visible;">2</div>
+			<div class="list-text">企业是吸纳人才的主力.随着国有企业改革步伐加大,对高新技术人才、计算机专业大学生的需求将迅速增长.高新技术企业每年产值增长在20以上,迅速发展和这一行业要求员工素质高的特点,成为吸收计算机专业大学生的主要企业单位.加入WTO,外国资本、公司的涌入,需要招聘大批高素质的计算机专业人才,毕业生的就业选择和人才流动会偏向外资企业.</div>
+		</div>
+		<div class="col-md-12">
+			<div class="list-icon text-center" style="visibility: visible;">3</div>
+			<div class="list-text">教师职业倍受青睐.2002年我国教育经费占国内生产总值的比例已上升到3.6,高等教育大众化、现代教学技术的普及,需要大量的计算机专业人才.2001年全国高校和中小学教职工的年平均工资分别为18054元、10194元,成为近十年来工资增幅最大的职业之一.2000年全国计算机专业师范生有79.35的毕业生到各类学校任教,非师范生从事教育工作的也占到10.38,教师职业越来越热.</div>
+		</div>
 	</div>
 	<!-- 课程内容 -->
 	<div class="row">
