--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.courses__index, .courses__list, .courses__system {
+.courses__index, .courses__list, .system__index, .system__show {
 	.courses-bread {
 		padding-left: -15px;
 		background-color: #fff;
@@ -44,7 +44,7 @@
 		}
 	}
 }
-.courses__list, .courses__system {
+.courses__list, .system__index, .system__show {
 	.category a {
 		height: 130px;
 		line-height: 130px;
@@ -76,7 +76,7 @@
 	}
 }
 
-.courses__index, .courses__list, .courses__system {
+.courses__index, .courses__list, .system__index, .system__show {
 	.title-bar {
 		width: 100%;
 		height: 60px;
@@ -88,8 +88,8 @@
 		  margin-left: -40px;
 		  position: absolute;
 		  font-size: 22px;
-		  // top: 20px;
 		  z-index: 1;
+		  top: 0;
 		}
 		.line {
 			height: 2px;
@@ -139,7 +139,7 @@
 		}
 	}
 }
-.courses__system {
+.system__index, .system__show {
 	.system {
 		padding: 0;
 		img:hover { 
@@ -149,14 +149,6 @@
 				-moz-transform:scale(1.2);    
 				-o-transform:scale(1.2);    
 				-ms-transform:scale(1.2);
-				
-			// overflow: hidden;
-			// width: 110%;
-			// height: 110%;
-			// transition: width 2s ,height 2s;
-			// -moz-transition: width 2s ,height 2s;	/* Firefox 4 */
-			// -webkit-transition: width 2s ,height 2s;	/* Safari 和 Chrome */
-			// -o-transition: width 2s ,height 2s;
 		}
 		.system-list {
 			padding: 0 15px;
@@ -265,5 +257,21 @@
 		p{
 			text-indent: 2em;
 		}
+	}
+}
+
+.system__show {
+	.system-intro {
+		text-indent: 2em;
+		line-height: 40px;
+		font-weight: bold;
+	}
+	.system-dtsgixinyuan {
+		color: #36B29E;
+	}
+	.system-hr {
+		border: 5px solid #36B29E;
+		width: 100px;
+		transform:rotate(90deg);
 	}
 }
