--- a/app/views/system/show.html.erb
+++ b/app/views/system/show.html.erb
@@ -19,19 +19,19 @@
 			<div class="line"></div>
 		</div>
 		<div class="col-xs-12">
-			<div class="col-xs-12">
+			<div class="col-xs-12 system-bordered">
 				<p><i class="system-dtsgixinyuan iconfont">&#xe605;</i>
 				开发环境搭建（本阶段讲解了Java开发需要掌握的基础知识和软件）</p>
 
-				<div class="col-sm-4">
-					<div class="bordered">
+				<div class="col-sm-4 bordered">
+					<div>
 					  <%= link_to "#" do %>
 					  		<%= image_tag "system_picture.png", width:"100%", class:"img-responsive" %>
 							<div class="col-sm-12 mt-10">
 								<p class="text-muted course-descrip">dfhdhdhdhd</p>
 								<p class="text-muted course-title">hdfhdfhdfhdfhdfhdf</p>
 							</div>
-							<div class="col-sm-12 infos">
+							<div class="col-sm-12 system-icon">
 								<i class="icon-tubiao iconfont"></i> 465346
 								&nbsp;&nbsp;&nbsp;
 								<i class="icon-shizhong iconfont"></i>yrtyrtyrthtfjryj
@@ -42,11 +42,11 @@
 				</div>
 
 			</div>
-			<div class="col-xs-12">
+			<div class="col-xs-12 system-bordered">
 				<i class="system-dtsgixinyuan iconfont">&#xe604;</i>
 				开发环境搭建（本阶段讲解了Java开发需要掌握的基础知识和软件）
 			</div>
-			<div class="col-xs-12">
+			<div class="col-xs-12 system-bordered">
 				<i class="system-dtsgixinyuan iconfont">&#xe604;</i>
 				开发环境搭建（本阶段讲解了Java开发需要掌握的基础知识和软件）
 			</div>
