--- a/app/views/admin/applies/index.html.erb
+++ b/app/views/admin/applies/index.html.erb
@@ -11,13 +11,9 @@
 		<a href="<%= admin_applies_path(train_name: 'ios') %>" class="btn btn-<%= params[:train_name] == "ios" ? "success" : "default" %>">ios开发</a>
 		<a href="<%= admin_applies_path(train_name: 'android') %>" class="btn btn-<%= params[:train_name] == "android" ? "success" : "default" %>">安卓开发</a>
 		<a href="<%= admin_applies_path(train_name: 'web') %>" class="btn btn-<%= params[:train_name] == "web" ? "success" : "default" %>">WEB全栈</a>
-		<div class="col-xs-3 pull-right">
-			<div class="form-group">
-				<%= render partial: 'admin/common/keyword', locals: {path: ""} %>
-			</div>
-		</div>
+		<%= link_to("导出为Excel", admin_applies_path(train_name: params[:train_name], format: 'xls'), class: "btn btn-success pull-right") %>
 	</div>
+	<p>&nbsp;</p>
 <%end%>
 
 <%= render partial: "data", locals: { applies: @applies } %>
-<%= link_to("导出为Excel", admin_applies_path(train_name: params[:train_name], format: 'xls'), class: "btn btn-success") %>
