--- a/app/views/career/index.html.erb
+++ b/app/views/career/index.html.erb
@@ -2,20 +2,16 @@
 	<ol class="courses-bread breadcrumb">
 	<span><i class="iconfont">&#xe60a;</i></span>
 	<li><a href="#">课程中心</a></li>
-	<li class="active">全部课程</li>
+	<li class="active">技术体系</li>
 	</ol>
 	<%= render partial: "share/category" %>
 	<div class="row">
 		<div class="title-bar">
-			<h4 class="text-center title">院校选择</h4>
+			<h4 class="text-center title">职业选择</h4>
 			<div class="line"></div>
 		</div>
-		<div class="col-xs-12" id="CollegeList">
-		<%(0..8).each do |f| %>
-			<div class="col-xs-3 college-list">
-				<%= image_tag "course_college.png", width:"100%", class:"college_img" %>
-			</div>
-		<% end %>
+		<div class="col-xs-12 career">
+			
 		</div>
 	</div>
 </div>
