--- a/app/views/career/show.html.erb
+++ b/app/views/career/show.html.erb
@@ -7,7 +7,7 @@
 	</ol>
 	<div class="row category">
 		<div class="title-bar">
-			<h4 class="text-center title">体系简介</h4>
+			<h4 class="text-center career-title">Android工程师</h4>
 			<div class="line"></div>
 		</div>
 		<div class="system-intro col-sm-12">这是体系简介这是体系简介这是体系简介这是体系简介这是体系简介这是体系简介这是体系简介，这是体系简介这是体系简介这是体系这是体系简介这是体系简介这是体系简介这是体系简介这是体系简介这是体系简介这是体系简介，这是体系简介这是体系简介这是体系这是体系简介这是体系简介这是体系这是体系简介这是体系简介这是体系这是体系简介这是体系简介这是体系这是体系简介这是体系简介这是体系这是体系简介这是体系简介这是体系。</div>
@@ -19,36 +19,40 @@
 			<div class="line"></div>
 		</div>
 		<div class="col-xs-12">
-			<div class="col-xs-12 system-bordered">
-				<p><i class="system-dtsgixinyuan iconfont">&#xe605;</i>
-				<span>Java技术</span>（本阶段讲解了Java开发需要掌握的基础知识和软件）</p>
-				<% (0..2).each do |i| %>
-				<div class="col-sm-4">
+			<div class="col-xs-12 text-center">
+				<span class="career-t"><h4>Java技术</h4>（本阶段讲解了Java开发需要掌握的基础知识和软件）</span><br>
+				<i class="career-icon iconfont">&#xe602;<div class="career-blank">&nbsp</div></i>
+			</div>
+			<div class="career-media col-xs-12">
+				<% (0..3).each do |i| %>
+				<div class="col-sm-3">
 					<%= render partial: "share/media" %>
 				</div>
 				<% end %>
 			</div>
-			<div class="col-xs-12 system-bordered">
-				<p><i class="system-dtsgixinyuan iconfont">&#xe604;</i>
-				<span>开发环境搭建</span>（本阶段讲解了Java开发需要掌握的基础知识和软件）</p>
-				<% (0..2).each do |i| %>
-				<div class="col-sm-4">
+			<div class="col-xs-12 text-center">
+				<i class="career-i iconfont">&#xe602;<div class="career-blank">&nbsp</div></i>
+				<span class="career-t"><h4>Java技术</h4>（本阶段讲解了Java开发需要掌握的基础知识和软件）</span><br>
+				<i class="career-icon iconfont">&#xe602;<div class="career-blank">&nbsp</div></i>
+			</div>
+			<div class="career-media col-xs-12">
+				<% (0..3).each do |i| %>
+				<div class="col-sm-3">
 					<%= render partial: "share/media" %>
 				</div>
 				<% end %>
 			</div>
-			<div class="col-xs-12 system-bordered">
-				<p><i class="system-dtsgixinyuan iconfont">&#xe604;</i>
-				<span>开发环境搭建</span>（本阶段讲解了Java开发需要掌握的基础知识和软件）</p>
-				<% (0..2).each do |i| %>
-				<div class="col-sm-4">
+			<div class="col-xs-12 text-center">
+				<i class="career-i iconfont">&#xe602;<div class="career-blank">&nbsp</div></i>
+				<span class="career-t"><h4>Java技术</h4>（本阶段讲解了Java开发需要掌握的基础知识和软件）</span><br>
+				<i class="career-icon iconfont">&#xe602;<div class="career-blank">&nbsp</div></i>
+			</div>
+			<div class="career-media col-xs-12">
+				<% (0..3).each do |i| %>
+				<div class="col-sm-3">
 					<%= render partial: "share/media" %>
 				</div>
 				<% end %>
 			</div>
-			<div class="col-xs-12">
-				<p><i class="system-xinyuan iconfont">&#xe605;</i></p>
-			</div>
-		</div>
 	</div>
 </div>
