--- a/app/views/courses/list.html.erb
+++ b/app/views/courses/list.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 	<ol class="courses-bread breadcrumb">
 	<span><i class="iconfont">&#xe60a;</i></span>
-	<li><a href="#">课程中心</a></li>
-	<li class="active">全部课程</li>
+	<li><%= link_to "课程中心", courses_path %></li>
+	<li class="active">大学课程</li>
 	</ol>
 	<%= render partial: "share/category" %>
 	<div class="row">
