--- a/app/views/share/_category.html.erb
+++ b/app/views/share/_category.html.erb
@@ -3,24 +3,24 @@
 		<h4 class="text-center title">课程分类</h4>
 		<div class="line"></div>
 	</div>
-	<div class="search-course">
+	<div id="search-band" class="search-course">
 		<div class="col-sm-3">
-			<%= link_to "#", class: "link-lg no-active", param: "" do %>
+			<%= link_to courses_path, class: "link-lg active", param: "" do %>
 			<i class="courses-iconfont iconfont">&#xe603;</i><span class="courses-cate">全部课程</span>
 			<% end %>
 		</div>
 		<div class="col-sm-3">
-			<%= link_to "#", class: "link-lg no-active" do %>
+			<%= link_to list_courses_path, class: "link-lg" do %>
 			  <i class="courses-iconfont iconfont">&#xe607;</i><span class="courses-cate">大学课程</span>
 			<% end %>
 		</div>
 		<div class="col-sm-3">
-			<%= link_to "#", class: "link-lg active" do %>
+			<%= link_to system_index_path, class: "link-lg" do %>
 			  <i class="courses-iconfont iconfont">&#xe60c;</i><span class="courses-cate">技术体系</span>
 			<% end %>
 		</div>
 		<div class="col-sm-3">
-			<%= link_to "#", class: "link-lg no-active" do %>
+			<%= link_to career_index_path, class: "link-lg" do %>
 			  <i class="courses-iconfont iconfont">&#xe608;</i><span class="courses-cate">职业路径</span>
 			<% end %>
 		</div>
