--- a/app/views/share/_media.html.erb
+++ b/app/views/share/_media.html.erb
@@ -1,15 +1,15 @@
-<div class="bordered">
-  <%= link_to "#" do %>
+  <%= link_to "#" do %>	
+	<div class="bordered">
   		<%= image_tag "system_picture.png", width:"100%", class:"img-responsive" %>
 		<div class="col-sm-12 mt-10">
-			<p class="text-muted course-descrip">dfhdhdhdhd</p>
-			<p class="text-muted course-title">hdfhdfhdfhdfhdfhdf</p>
+			<p class="text-muted course-descrip">操作系统与虚拟化安全</p>
+			<p class="text-muted course-title">本课程将使用sass和reaurequire.js来开发一个侧栏工具条</p>
 		</div>
 		<div class="col-sm-12 system-icon">
-			<i class="icon-tubiao iconfont"></i> 465346
+			<i class="icon-tubiao iconfont"></i>465346
 			&nbsp;&nbsp;&nbsp;
 			<i class="icon-shizhong iconfont"></i>12345小时
 			<b class="pull-right">免费</b>
 		</div>
-	<% end %>
-</div>
+	</div>
+<% end %>
