--- a/app/views/system/show.html.erb
+++ b/app/views/system/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 	<ol class="courses-bread breadcrumb">
 	<span><i class="iconfont">&#xe60a;</i></span>
-	<li><a href="#">课程中心</a></li>
-	<li><a href="#">技术体系</a></li>
+	<li><%= link_to "课程中心", courses_path %></li>
+	<li><%= link_to "技术体系 ", system_index_path %></li>
 	<li class="active">Java语言开发知识体系</li>
 	</ol>
 	<div class="row category">
