--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -1,7 +1,9 @@
 // Place all the styles related to the Courses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+.media {
+	padding: 0!important;
+}
 .courses__list {
 	#CollegeList {
 		padding: 0 7.5px;
@@ -27,6 +29,7 @@
 		}
 	}
 }
+
 .system__index, .system__show {
 	.system {
 		padding: 0;
@@ -64,6 +67,7 @@
 		}
 	}
 }
+
 .courses__show{
 	.sub_head{
 		margin: 10px 0;
@@ -198,7 +202,7 @@
 		position: absolute;
 		font-size: 22px;
 		z-index: 1;
-		top: 15px;
+		top: -2px;
 	}
 	.career-t {
 		color: #36B29E;
@@ -229,5 +233,6 @@
 	.career-media {
 		border: 1px solid #36B29E;
 		padding-top: 40px;
+		padding-bottom: 20px;
 	}
 }
