--- a/app/assets/stylesheets/application/user.scss
+++ b/app/assets/stylesheets/application/user.scss
@@ -92,7 +92,7 @@
 	border-width: 3px 0 0; 
 }
 
-.user__my_courses, .user__my_projects {
+.user__my_courses, .user__my_projects，.user__my_resumes {
 	.my-nav{
 		background-color:#fff;
 		margin-top: 20px;
@@ -193,35 +193,44 @@
 	}
 }
 
- /*  .waperbg {
-	 background: image-url('center_bg.png') left top no-repeat;
- } */
 
 /* user left_nav */
+// .waperbg>:before {
+//       content: ' ';
+//        position: fixed;
+//        z-index: -1;
+//        top: 0;
+//        right: 0;
+//        bottom: 0;
+//        left: 0;
+//        background: image-url('center_bg.png') 50% 0 repeat-y;
+//        background-size: 100% 100%;
+// }
 .waperbg {
 	background: image-url('center_bg.png') left top no-repeat;
+	background-size: 100% 100%;
 }
 
-	.thumbnail {
-		margin-top:40px;
-		padding-top:10px;
-		.caption {
-			text-align:center;
-			.empirical {
-				padding-right:20px;
-			}
-			.value {
-				color:red;
-			}
-			.divesi {
-			 margin:19px auto;
-			 border-width: 1.5px 0px 0px;
-			 border-style: dashed none none;
-			 border-color:#787A70;
-		 }
-	 }
- }
- .left_nav {
+.thumbnail {
+	margin-top:40px;
+	padding-top:10px;
+	.caption {
+		text-align:center;
+		.empirical {
+			padding-right:20px;
+		}
+		.value {
+			color:red;
+		}
+		.divesi {
+		 margin:19px auto;
+		 border-width: 1.5px 0px 0px;
+		 border-style: dashed none none;
+		 border-color:#787A70;
+		}
+	}
+}
+.left_nav {
 	background-color:#fff;
 	border:solid 1px #DDDDDD;
 	border-radius:5px;
@@ -252,7 +261,7 @@
 			 border-width: 2px 0px 0px;
 			 border-style: dashed none none;
 			 border-color:#DDDDDD;
-		 }
+	}
 }
 
 /* my_project_rightaire */
@@ -269,16 +278,16 @@
 	padding:10px 10px 0;
 	margin-bottom:20px;
 	border-color:#00CBD2;
-	.active > a {
-		border-color:#00CBD2;
-		border-width:4px 2px 0 2px;
+		.active > a {
+			border-color:#00CBD2;
+			border-width:4px 2px 0 2px;
 		}
-}
+	}
 
 /* my_courses page*/
-.courses_tent {
-	margin-top:20px;
-}
+	.courses_tent {
+		margin-top:20px;
+	}
 	.bordered {
 		border: solid 1px #e3e3e3;
 		margin-bottom: 20px;
