--- a/app/assets/stylesheets/application/worktrains.scss
+++ b/app/assets/stylesheets/application/worktrains.scss
@@ -1,34 +1,35 @@
 // global.scss
-.title-bar {
-	width: 100%;
-	height: 80px;
-	position: relative;
-	.title {
-    background-color: #fff;
-	  width: 120px;
-	  left: 50%;
-	  margin-left: -40px;
-	  position: absolute;
-	  top: 20px;
-	  z-index: 1;
-	  font-size: 22px;
+.worktrains__index, .worktrains__show {
+	.title-bar {
+		width: 100%;
+		height: 80px;
+		position: relative;
+		.title {
+	    background-color: #fff;
+		  width: 120px;
+		  left: 50%;
+		  margin-left: -40px;
+		  position: absolute;
+		  top: 20px;
+		  z-index: 1;
+		  font-size: 22px;
+		}
+		.line {
+			height: 2px;
+			width: 97.5%;
+			position: absolute;
+	    			top: 38px;
+			background: #797a7a;
+		}
 	}
-	.line {
-		height: 2px;
-		width: 97.5%;
-		position: absolute;
-    			top: 38px;
-		background: #797a7a;
+	.infos {
+		padding: 30px 0;
+		color: #9b9b9b;
+		span {
+			color: #19b29f;
+		}
 	}
 }
-.infos {
-	padding: 30px 0;
-	color: #9b9b9b;
-	span {
-		color: #19b29f;
-	}
-}
-
 .worktrains__index{
 	.courses_tent {
 	margin-top:20px;
