--- a/app/views/career/index.html.erb
+++ b/app/views/career/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 	<ol class="courses-bread breadcrumb">
 	<span><i class="iconfont">&#xe60a;</i></span>
-	<li><a href="#">课程中心</a></li>
-	<li class="active">技术体系</li>
+	<li><%= link_to "课程中心", courses_path %></li>
+	<li class="active">职业路径</li>
 	</ol>
 	<%= render partial: "share/category" %>
 	<div class="row">
@@ -10,8 +10,14 @@
 			<h4 class="text-center title">职业选择</h4>
 			<div class="line"></div>
 		</div>
-		<div class="col-xs-12 career">
-			
+		<div class="media col-xs-12">
+			<%(0..2).each do |f| %>
+			<%= link_to career_path(:id), param: "" do %>
+			<div class="col-sm-4">
+				<%= render partial: "media" %>
+			</div>
+			<% end %>
+			<% end %>
 		</div>
 	</div>
 </div>
