--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,49 +1,22 @@
 <div class="container">
 	<ol class="courses-bread breadcrumb">
 	<span><i class="iconfont">&#xe60a;</i></span>
-	<li><a href="#">课程中心</a></li>
 	<li class="active">全部课程</li>
 	</ol>
-	<div class="row category">
-		<div class="title-bar">
-			<h4 class="text-center title">课程分类</h4>
-			<div class="line"></div>
-		</div>
-		<div class="search-course">
-			<div class="col-sm-3">
-				<%= link_to courses_path, class: "link-lg active", param: "" do %>
-				<i class="courses-iconfont iconfont">&#xe603;</i><span class="courses-cate">全部课程</span>
-				<% end %>
-			</div>
-			<% @categories.each_with_index do |category, index|%>
-				<div class="col-sm-3">
-					<%= link_to courses_path(category_id: category.id), class: "link-lg no-active" do %>
-					  <i class="courses-iconfont iconfont">&#xe607;</i><span class="courses-cate"><%= category.name %></span>
-					<% end %>
-				</div>
-			<% end %>
-		</div>
-		<!-- <div class="col-sm-3">
-			<div class="col-sm-6">
-				<%#= link_to "", class: "link-sm" do %>
-				<span>全部课程</span>
-				<% #end %>
-			</div>
-			<div class="col-sm-6">
-				<%#= link_to "", class: "link-sm" do %>
-				<span>全部课程</span>
-				<% #end %>
-			</div>
-		</div> -->
-	</div>
-
+	<%= render partial: "share/category" %>
 	<div class="row">
 		<div class="title-bar">
 			<h4 class="text-center title">课程中心</h4>
 			<div class="line"></div>
 		</div>
 		<div id="courseList">
-		  <%= render partial: "course", locals: {category: '在线课程'} %>
+		<div class="media col-xs-12">
+			<% (0..8).each do |i| %>
+			<div class="col-sm-4">
+				<%= render partial: "share/media" %>
+			</div>
+			<% end %>
+		</div>
 		</div>
 	</div>
 </div>
