--- a/app/views/courses/system.html.erb
+++ b/app/views/courses/system.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<ol class="courses-bread breadcrumb">
 	<span><i class="iconfont">&#xe60a;</i></span>
-	<li><a href="#">课程中心</a></li>
+	<%= link_to "课程中心", courses_path %>
 	<li class="active">全部课程</li>
 	</ol>
 	<div class="row category">
